# space-rocks-web

./: .gitignore  Cargo.toml  Makefile.toml  index.html
assets/: Asteroid_Med.xcf  Asteroid_Small.xcf  file_to_bytes.ipynb
src/: input.rs  lib.rs  main.rs  map.rs  network.rs  objects.rs  screen.rs  ubevy.rs
src/physics/: angular.rs  mod.rs  rapier_angular.rs  velocity.rs
