[package]
name = "space-rocks-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
  "winit/x11"
]

web = [
  "bevy_webgl2",
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
bevy_webgl2 = {version="0.5.0", optional=true}
winit = {version="*", optional=true}
ron = "*"
serde = "*"
console_error_panic_hook = "*"
wasm-bindgen = {version = "*", features = ["serde-serialize"]}
bevy_rapier2d = "0.11.0"
futures = "*"
wasm-bindgen-futures = "*"
bevy-inspector-egui = "*"
bevy_svg = "0.3"
bevy_render = "*"


[profile.dev.package.bevy_rapier2d]
opt-level = 3

[dependencies.web-sys]
version = "*"
optional = false
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]